--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "winston": "^3.2.1"
