--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,10 @@
         "sourceType": "module"
     },
     "rules": {
-        "import/no-extraneous-dependencies": 0
+        "import/no-extraneous-dependencies": 0,
+        "max-len": ["error", 150],
+        "import/prefer-default-export": 0,
+        "no-underscore-dangle": 0,
+        "no-mixed-operators": 0
     }
 }
