--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Sarath P S",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "config": "^3.3.0",
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.9.0",
     "react": "^16.13.0",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/node": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
