--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:server": "webpack --config webpack.server.js",
     "build:client": "webpack --config webpack.client.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start:dev": "nodemon ./dist/server.js"
   },
   "author": "Sarath P S",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "serialize-javascript": "^3.0.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
+    "file-loader": "^6.0.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
     "postcss-loader": "^3.0.0",
