--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
             {
                 "regenerator": true
             }
-        ]
+        ],
+        "@babel/plugin-proposal-class-properties"
     ]
 }
