feat(*): complete pagination setup

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
         "max-len": ["error", 150],
         "import/prefer-default-export": 0,
         "no-underscore-dangle": 0,
-        "no-mixed-operators": 0
+        "no-mixed-operators": 0,
+        "no-unused-expressions": 0
     }
 }
