--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
         "import/prefer-default-export": 0,
         "no-underscore-dangle": 0,
         "no-mixed-operators": 0,
-        "no-unused-expressions": 0
+        "no-unused-expressions": 0,
+        "react/destructuring-assignment": 0
     }
 }
